unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Billable_Assignment_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Billable_Assignment_Hours__c</fullName>
    <description>The sum of billable hours calculated from the assignments of the resource that is associated with this utilization calculation result.</description>
    <inlineHelpText>The sum of billable hours calculated from the assignments of the resource that is associated with this utilization calculation result.</inlineHelpText>
    <label>Billable Assignment Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>