unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Calendar_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Calendar_Hours__c</fullName>
    <description>The number of hours from the resource's work calendar on the date of this utilization result.</description>
    <inlineHelpText>The number of hours from the resource's work calendar on the date of this utilization result.</inlineHelpText>
    <label>Calendar Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>