unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Date__c</fullName>
    <description>The calendar date that is associated with this utilization result.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>