unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The group that is associated with this utilization result on the specified date.</description>
    <label>Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Utilization Results</relationshipLabel>
    <relationshipName>Utilization_Results</relationshipName>
    <type>Lookup</type>
</CustomField>