unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Held_Resource_Request_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Held_Resource_Request_Hours__c</fullName>
    <description>The sum of hours calculated from the held resource requests of the resource that is associated with this utilization calculation result.</description>
    <inlineHelpText>The sum of hours calculated from the held resource requests of the resource that is associated with this utilization calculation result.</inlineHelpText>
    <label>Held Resource Request Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>