unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Last_Updated_Run__c.field-meta.xml
<CustomField>
    <fullName>pse__Last_Updated_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the utilization run this utilization result relates to.</description>
    <inlineHelpText>Lookup to the utilization run this utilization result relates to.</inlineHelpText>
    <label>Utilization Run</label>
    <referenceTo>pse__Utilization_Run__c</referenceTo>
    <relationshipLabel>Utilization Results</relationshipLabel>
    <relationshipName>Utilization_Results</relationshipName>
    <type>Lookup</type>
</CustomField>