unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Non_Billable_Timecard_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Non_Billable_Timecard_Hours__c</fullName>
    <description>The sum of non-billable hours calculated from the timecards of the resource that is associated with this utilization calculation result.</description>
    <inlineHelpText>The sum of non-billable hours calculated from the timecards of the resource that is associated with this utilization calculation result.</inlineHelpText>
    <label>Non-Billable Timecard Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>