unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the resource associated with this utilization calculation result.</description>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Utilization Results</relationshipLabel>
    <relationshipName>Utilization_Results</relationshipName>
    <type>Lookup</type>
</CustomField>