unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>pse__Unique_Identifier__c</fullName>
    <description>The unique identifier for this utilization result record in the format Date, Resource, Resource Role, Region, Practice and Group.</description>
    <inlineHelpText>The unique identifier for this utilization result record in the format Date, Resource, Resource Role, Region, Practice and Group.</inlineHelpText>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>