unpackaged/main/default/objects/pse__Utilization_Result__c/fields/pse__Utilization_Excluded_Held_RR_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Excluded_Held_RR_Hours__c</fullName>
    <description>The sum of hours excluded from utilization calculated from the held resource requests of the resource that is associated with this utilization calculation result.</description>
    <inlineHelpText>The sum of hours excluded from utilization calculated from the held resource requests of the resource that is associated with this utilization calculation result.</inlineHelpText>
    <label>Utilization Excluded Held RR Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>